15807
What steps will reproduce the problem (please be specific and use wikiformatting)?
```scala
$$ scala
Welcome to Scala version 2.8.1.final (Java HotSpot(TM) Client VM, Java 1.6.0_20).
Type in expressions to have them evaluated.
Type :help for more information.

scala> 1 + 2
(console):1: error: ';' expected but integer literal found.
       1  2
          ^
```



What is the expected behavior?

3

What do you see instead?

The above error message.

What versions of the following are you using?
Scala: 2.8.1.final
Java: 1.6.0_20
Operating system: CYGWIN_NT-6.0-WOW64 shiny 1.7.7(0.230/5/3) 2010-08-31 09:58 i686 Cygwin
(Cygwin on Windows Vista SP1)
